Mobile: fix position of feedback button
To prevent content overlap, keep the feedback button up and right.

--- a/app/assets/stylesheets/geoportal.scss
+++ b/app/assets/stylesheets/geoportal.scss
@@ -25,6 +25,9 @@ span.list-view.document-counter {
 
 // Feedback
 #feedback {
+  position:absolute;
+  top:0;
+  right:0;
   margin-top:2rem;
 }
 
